--- a/inst/shinyapp/www/style.css
+++ b/inst/shinyapp/www/style.css
@@ -10,6 +10,7 @@
 
 .box-header {
   padding: 10px 0px 0px 10px;
+  margin-bottom: 10px;
 }
 
 .main-header .logo {
@@ -252,3 +253,37 @@ label.control-label, .selectize-control.single{ display: table-cell; text-align:
   display:inline-flex;
     padding-left: 10px;
 }
+
+.irs {
+    width: inherit;
+    margin-right: 5px;
+}
+
+
+
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.checkbox, .radio {
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
+label {
+  display: inherit;
+}
+
+#datafile-upload_or_server > div > label:hover {
+  text-decoration: underline;
+}
+
+
+button.dt-button:hover:not(.disabled), div.dt-button:hover:not(.disabled), a.dt-button:hover:not(.disabled) {
+  padding: 0.25em .5em;
+  border: none;
+}
+
+/*#datafile-upload_or_server > div > label
+*/
